backboneでタスクのリストを実装

--- a/backbone_sample02-05/index.html
+++ b/backbone_sample02-05/index.html
@@ -9,10 +9,10 @@
 <body>
 
 <div class="main" id="app">
-  <form class="form">
+  <form class="form js-form">
     <div class="inputArea">
       <input type="text" class="inputText js-get-val" value="" placeholder="ここにTODO内容を書く">
-      <span class="error js-toggle-error">入力が空です</span>
+      <span class="error">入力が空です</span>
     </div>
     <button class="btn js-add-todo">TODOを追加</button>
   </form>
