--- a/react_sample01-05-redux/index.html
+++ b/react_sample01-05-redux/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>TODO LIST</title>
-  <link rel="stylesheet" href="dist/app.css">
+  <link rel="stylesheet" href="dist/css/app.css">
 </head>
 <body>
 
@@ -11,9 +11,6 @@
     <div class="section" id="app1"></div>
     <div class="section" id="app2">app2</div>
     <div class="section" id="app3">app3</div>
-    <div class="section" id="app4">app4</div>
-    <div class="section" id="app5">app5</div>
-    <div class="section" id="app6">app6</div>
   </div>
 
 <script src="dist/js/bundle.js"></script>
