--- a/react_sample01-05-redux/index.html
+++ b/react_sample01-05-redux/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>TODO LIST</title>
   <link rel="stylesheet" href="dist/css/app.css">
+  <script src="https://use.fontawesome.com/e3ae05b8e6.js"></script>
 </head>
 <body>
 
-  <div class="main">
-    <div class="section" id="app1"></div>
-    <div class="section" id="app2">app2</div>
-    <div class="section" id="app3">app3</div>
-  </div>
+<div class="main">
+  <h1 class="mainTitle">TODOS</h1>
+  <div id="app"></div>
+</div>
 
 <script src="dist/js/bundle.js"></script>
 </body>
