--- a/vue_sample/index.html
+++ b/vue_sample/index.html
@@ -13,47 +13,92 @@
 
   <section class="section">
     <div id="app1">
-      {{ message }}
+      <span v-if=" isShow === 'a' ">v-ifを使って、domの表示非表示が簡単に出来る。非表示だとDOM自体なくなるので注意！</span>
+      <span v-else-if=" isShow === 'b' ">v-else-ifのタグ。必ずv-ifと同列の要素にしか指定できない</span>
+      <span v-else>v-elseのタグ。必ずv-ifと同列の要素にしか指定できない</span>
     </div>
   </section>
 
   <section class="section">
     <div id="app2">
-      <span v-bind:title="message" :class="classObject">
-        この文字にマウスホバーすると画面を表示した日付が出る
-      </span>
+      <span v-show="isShow">v-showで表示したタグ</span>
+      <span v-show="!isShow">v-showで見えなくなっただけのタグ（display:noneにしただけ）</span>
     </div>
   </section>
 
   <section class="section">
     <div id="app3">
-      <span v-if="isShow">v-ifを使って、domの表示非表示が簡単に出来る。非表示だとDOM自体なくなるので注意！</span>
+      <input type="checkbox" v-model="isShow">
+      <p>isShow: {{isShow}}</p>
+      <p>showString: {{showString}}</p>
+      <p>showStringMethods: {{ showStringMethods() }}</p>
+      <p>showString2: {{showString2}}</p>
+      <p>showStringMethods2: {{ showStringMethods2() }}</p>
     </div>
   </section>
 
   <section class="section">
     <div id="app4">
-      <ol>
-        <li v-for="todo in todos">
-          {{ todo.text }}
-        </li>
-      </ol>
+      <p>{{script}}</p>
+      <p v-html="script"></p>
     </div>
   </section>
 
-  <section class="section">
-    <div id="app5">
-      <p>{{ message }}</p>
-      <button v-on:click="changeMessage">メッセージを変える</button>
-    </div>
-  </section>
+
+  <style>
+    .fade-enter-active, .fade-leave-active {
+      transition: opacity .5s;
+    }
+
+    .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */
+    {
+      opacity: 0;
+    }
+  </style>
 
   <section class="section">
     <div id="app6">
-      <p>{{ message }}</p>
-      <input type="text" v-model="message">
+      <button v-on:click="show = !show">
+        Toggle
+      </button>
+      <transition name="fade">
+        <p v-if="show">hello</p>
+      </transition>
     </div>
   </section>
+
+
+  <section class="section">
+    <div id="app7">
+      <button-counter></button-counter>
+      <button-counter></button-counter>
+      <button-counter></button-counter>
+    </div>
+  </section>
+
+  <section class="section">
+    <div id="app8">
+      <blog-post title="こうやってtitleプロパティをpropsで渡せます。"></blog-post>
+      <blog-post title="それぞれのコンポーネントにtitleのpropsを渡せます。"></blog-post>
+      <blog-post title="reactのpropsと同じ機能です。"></blog-post>
+    </div>
+  </section>
+
+  <section class="section">
+    <div id="app9">
+      <div id="blog-posts-events-demo">
+        <div :style="{ fontSize: postFontSize + 'em' }">
+          <blog-post
+                  v-for="post in posts"
+                  v-on:enlarge-text="fontSizeScale()"
+                  v-bind:key="post.id"
+                  v-bind:post="post"
+          ></blog-post>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </div>
 
